--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "type": "typo3-cms-extension",
   "keywords": ["ebook", "sz_ebook", "flipbook", "HTML5", "responsive"],
-  "homepage": "http://sz_ebook.roemmich.eu",
+  "homepage": "http://sz-ebook.roemmich.eu",
   "time": "2017-01-11",
   "license": "GNU",
   "authors": [
@@ -20,9 +20,16 @@
     "issues": "https://github.com/TildBJ/sz_ebook/issues",
     "source": "https://github.com/TildBJ/sz_ebook"
   },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^2.7"
+  },
   "autoload": {
     "psr-4": {
       "Sunzinet\\SzEbook\\": "Classes"
     }
+  },
+  "config": {
+      "vendor-dir": ".Build/vendor",
+      "bin-dir": ".Build/bin"
   }
 }
