--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,22 @@
     "issues": "https://github.com/TildBJ/sz_ebook/issues",
     "source": "https://github.com/TildBJ/sz_ebook"
   },
+  "require": {
+    "typo3/cms": ">=6.2.0,<7.99.99"
+  },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^2.7"
+    "squizlabs/php_codesniffer": "^2.7",
+    "phpunit/phpunit": "^5.7"
   },
   "autoload": {
     "psr-4": {
       "TildBJ\\SzEbook\\": "Classes"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests",
+      "TYPO3\\CMS\\Core\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Classes/"
     }
   },
   "config": {
