--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "TildBJ/sz_ebook",
+  "name": "tildbj/sz-ebook",
   "description": "Shows eBooks in your browser, using turn.js and pdf.js, based on Extbase and Fluid. Works with Tablets and Smartphones.",
   "version": "1.1.0",
   "type": "typo3-cms-extension",
