--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script:
-  - .Build/bin/phpcs --standard=PSR2 *.php Classes
+  - .Build/bin/phpcs --standard=PSR2 *.php Classes Tests
