--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7
   - 7.1
@@ -18,4 +17,4 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script:
-  - .Build/bin/phpcs --standard=PSR2 *.php Classes Tests
+  - .Build/bin/phpcs --standard=PSR2 --extensions=php *
