[TASK] ignore phpcs warnings and remove wrong autoload informations
Closes #15

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 script:
-  - .Build/bin/phpcs --standard=PSR2 --extensions=php *
+  - .Build/bin/phpcs -n --standard=PSR2 --extensions=php *
