[BUGFIX] Wrong namespace in autoload informatino

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "TildBJ\\SzEbook\\Tests": "Tests"
+      "TildBJ\\SzEbook\\Tests\\": "Tests"
     }
   },
   "config": {
