--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "source": "https://github.com/TildBJ/sz_ebook"
   },
   "require": {
-    "typo3/cms": ">=6.2.0,<7.99.99"
+    "typo3/cms-core": "^6.2 || ^7.6 || ^8.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.7",
